# mv-defect-detect

./: README
10gige/: LICENSE
10gige/application/: flash.c  flash.h  framebuffer.c  framebuffer.h  gendc.c  gendc.h  main.c  readme.txt  update_eeprom_wrapper  update_eeprom_wrapper.sh  user.c  user.h  xgvrd-kr260.xml
10gige/application/Arm64/: Makefile  start.sh
10gige/application/Arm64/Release/: configure  configure.sh  gvrd  start.sh  update_atable  update_eeprom  xgvrd-kr260.xml  zcip  zcip.script
10gige/libGigE/: libGigE.h  readme.txt
10gige/libGigE/Arm64/Release/: libgigev.so.2.0  libgigev.so.2.0.1
10gige/libs/: libGigE.h
defect-detect/: CMakeLists.txt  LICENSE  README  README.md
defect-detect/config/: cca-accelarator.json  otsu-accelarator.json  preprocess-accelarator-stride.json  preprocess-accelarator.json  text2overlay.json
defect-detect/src/: main.cpp  vvas_cca.c  vvas_otsu.c  vvas_preprocess.c  vvas_text2overlay.cpp
